<resources>
    <string name="app_name">MeetFever!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse">Registrarse</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="my_invoices">Mis facturas</string>
    <string name="support">Soporte</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="meet_fever_inicia_sesi_n">MeetFever! Inicia sesión</string>
    <string name="nickname">Nickname</string>
    <string name="meet_fever_registro">MeetFever! Registro</string>
    <string name="ser_tu_nick_p_blico">Será tu nick público</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="cif">Cif</string>
    <string name="volver_atr_s">Volver atrás</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="repetir_la_contrase_a">Repetir la contraseña</string>
    <string name="meet_fever_explorer">MeetFever! Explorer</string>
    <string name="buscar_por_nombre">Buscar por nombre…</string>
    <string name="meet_fever_trendings">MeetFever! Trendings</string>
    <string name="meet_fever_people">MeetFever! People</string>
    <string name="seguidores">Seguidores</string>
    <string name="seguidos">Seguidos</string>
    <string name="nombre">nombre</string>
    <string name="frase">Frase</string>
    <string name="experiencias_destacadas">Experiencias Destacadas</string>
    <string name="personas_que_quiz_s_nconozcas">Personas que quizás conozcas</string>
    <string name="correoo_electr_nico">Correoo electrónico</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="trendings">Trendings</string>
    <string name="explorer">Explorer</string>
    <string name="people">People</string>
    <string name="buenos_dias_meetfever">¡Buenos dias MeetFever!</string>
    <string name="locales_trending">Locales Trending</string>
    <string name="top_locales">Top locales</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="no_text_has_been_passed">No se ha proporcionado texto para mostrar.</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="default_loading_text">Cargando…</string>
    <string name="dialog_hurray">¡Felicidades!</string>
    <string name="dialog_started_to_follow">Has empezado a seguir a este usuario</string>
    <string name="back_to_home">Volver a inicio</string>
    <string name="top_locales_none">No se encontraron Top locales.</string>
    <string name="top_influencers_none">No se encontraron Top Influencers.</string>
    <string name="personas_que_quiz_s_conozcas_none">No se encontraron personas.</string>
    <string name="feevers_mas_valorados_del_dia_none">No se encontraron Fevers mas valorados del dia.</string>
    <string name="feevers_by_user_none">No se encontraron Fevers de este usuario.</string>
    <string name="experiencias_destacadas_none">No se encontraron Experiencias Destacadas.</string>
    <string name="experiencias_none">No se encontraron Experiencias.</string>
    <string name="buenas_noches">Buenas noches</string>
    <string name="buenos_dias">Buenos dias</string>
    <string name="top_influencers">Top Influencers</string>
    <string name="personas_que_quiz_s_conozcas">Personas que quizás conozcas</string>
    <string name="opiniones_mas_valoradas">Opiniones mas valoradas</string>
    <string name="feevers_mas_valorados_del_dia">Fevers mas valorados del dia</string>
    <string name="informaci_n_de_la_experiencia">Información de la experiencia</string>
    <string name="informaci_n_general">Información general:</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="fecha_de_la_experiencia">Fecha de la experiencia:</string>
    <string name="precio_texto">Precio texto:</string>
    <string name="iva_comisi_n_incluido">Iva + Comisión incluido</string>
    <string name="comprar_entrada">Comprar Entrada/s</string>
    <string name="comprar_entrada_now">Proceder a la compra</string>
    <string name="comprar_entrada_cancel">Cancelar pago</string>
    <string name="meetfever">MeetFever!®</string>
    <string name="color_your_life">Color your life.</string>
    <string name="todas_las_experiencias_destacadas">Todas las experiencias destacadas</string>
    <string name="ver_mi_perfil">Ver mi perfil</string>
    <string name="redactar_fever">Redactar Fever!</string>
    <string name="publicar_fever">Publicar Fever!</string>
    <string name="meetmoji_emoji_que_represente_como_fu_tu_experiencia">Meetmoji (Emoji que represente como fué tu experiencia):</string>
    <string name="no_seleccionado">No seleccionado</string>
    <string name="_0_250_caracteres">0/250 Caracteres</string>
    <string name="cuenta_de_empresa">Cuenta de empresa:</string>
    <string name="experiencias_encontradas">Experiencias encontradas</string>
    <string name="locales_encontrados">Locales encontrados</string>
    <string name="_0">0</string>
    <string name="ajustes_del_usuario">Ajustes del usuario</string>
    <string name="seleccionar_im_genes">Seleccionar imágenes:</string>
    <string name="informaci_n_de_la_empresa">Información de la empresa:</string>
    <string name="nombre_empresa">Nombre empresa</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direcci_n_de_facturaci_n">Dirección de facturación</string>
    <string name="nombre_de_la_persona_f_sica">Nombre de la persona física</string>
    <string name="apellido_1_persona_f_sica">Apellido 1 persona física</string>
    <string name="apellido_2_persona_f_sica">Apellido 2 persona física</string>
    <string name="dni_de_la_persona_f_sica">DNI de la persona física</string>
    <string name="informaci_n_de_la_persona">Información de la persona:</string>
    <string name="nombre_persona">Nombre persona</string>
    <string name="apellido_1">Apellido 1</string>
    <string name="apellido_2">Apellido 2</string>
    <string name="dni_de_la_persona">DNI de la persona</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="buscar">Buscar</string>
    <string name="hacer_foto">Hacer foto</string>
    <string name="informaci_n_del_usuario">Información del usuario:</string>
    <string name="confirmar_cambios">Confirmar cambios</string>
    <string name="direcci_n_fiscal">Dirección fiscal</string>
    <string name="no_ha_seleccionado_ninguna_experiencia_opcional">No ha seleccionado ninguna experiencia (opcional)</string>
    <string name="no_ha_seleccionado_ning_n_local_aun">No ha seleccionado ningún local aún</string>
    <string name="atr_s">Atrás</string>
    <string name="meet_follower_scanner">Meet Follower Scanner</string>
    <string name="resultado_de_la_b_squeda">Resultado de la búsqueda.</string>
    <string name="error">Error</string>
    <string name="no_hay_internet">No hay conexión a internet.</string>
    <string name="volver_al_login">Volver al login.</string>
    <string name="esperar">Esperar…</string>
    <string name="rellena">Rellena todos los campos.</string>
    <string name="correo_no_valido">El correo electrónico no es válido.</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden.</string>
    <string name="registro_exitoso_inicie_sesion">Registro exitoso, inicie sesión.</string>
    <string name="error_al_cargar_imagen">Error al cargar la imagen…</string>
    <string name="usuario_no_permisos">Usuario no tiene permisos.</string>
    <string name="error_put">Se ha producido un error al contactar con el servidor (PUT)</string>
    <string name="error_post">Se ha producido un error al contactar con el servidor (POST)</string>
    <string name="error_get">Se ha producido un error al contactar con el servidor (GET)</string>
    <string name="atencion">Atención</string>
    <string name="creedenciales_erroneas">El usuario o la contraseña son incorrectos</string>
    <string name="no_se_pudo_actualizar_empresa">No se ha podido actualizar la empresa, es posible que alguno de los campos ya correspondan a otro usuario.</string>
    <string name="no_se_pudo_actualizar_persona">No se ha podido actualizar la persona, es posible que alguno de los campos ya correspondan a otro usuario.</string>
    <string name="empresa_actualizada_correctamente">Se ha actualizado correctamente la empresa.</string>
    <string name="exito">Exito</string>
    <string name="seleccionar_la_empresa_que_te_proporcion_la_vivencia">Seleccionar la empresa que te proporcionó la vivencia:</string>
    <string name="selecciona_la_experiencia_opcional">Selecciona la experiencia (opcional):</string>
    <string name="buscar_experiencia">Buscar Experiencia</string>
    <string name="escriba_aqui_su_opini_n_acerca_de_una_empresa_o_servicio">Escriba aqui su opinión acerca de una empresa o experiencia...</string>
    <string name="buscar_empresa">Buscar Empresa</string>
    <string name="buscar_empresa_por_nick">Buscar empresa por nick...</string>
    <string name="buscar_empresa_local">Buscar empresa/local...</string>
    <string name="ninguna_empresa_coincide_con_la_b_suqueda">Ninguna empresa coincide con la búsuqueda...</string>
    <string name="buscar_experiencia_por_titulo">Buscar experiencia por titulo...</string>
    <string name="ninguna_experiencia_coincide_con_la_b_squeda">Ninguna experiencia coincide con la búsqueda...</string>
    <string name="empresa_seleccionada">Empresa seleccionada</string>
    <string name="experiencia_seleccionada">Experiencia seleccionada</string>
    <string name="meetmoji_seleccionado">MeetMoji Seleccionado</string>
    <string name="ev_name">Nombre.</string>
    <string name="ev_surname1">Primer apellido.</string>
    <string name="ev_surname2">Segundo apellido.</string>
    <string name="ev_id">DNI.</string>
    <string name="n_entrada_t">Entrada número: %1$s</string>
    <string name="solo_queda_un_paso_m_s">¡Solo queda un paso más!</string>
    <string name="pulsa_en_el_boton_de_paypal_para_completar_el_pago">Pulsa en el boton de paypal para completar el pago.</string>
    <string name="data_error_profile_message">Termina de rellenar tus datos en ajustes.</string>
    <string name="data_error_message">Error al cargar datos, inténtelo de nuevo más tarde.</string>
    <string name="error_no_entradas">Lo sentimos, no quedan entradas para esta experiencia. 😔</string>
    <string name="account_with_no_permission">Esta cuenta no tiene permiso para comprar.</string>
    <string name="nombre_comprador">Nombre comprador:</string>
    <string name="apellidos_comprador">Apellidos comprador:</string>
    <string name="experiencia">Experiencia:</string>
    <string name="empresa_organizadora">Empresa organizadora:</string>
    <string name="precio_unitario">Precio unitario:</string>
    <string name="precio_total">Precio total:</string>
    <string name="id_transacci_n">Id Transacción: </string>
</resources>