<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:id="@+id/viewholder_entrada"
    android:backgroundTintMode="multiply"
    app:cardCornerRadius="20dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/text_view_n_entrada"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/n_entrada_t"
            android:textAlignment="center"
            android:textSize="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="1dp"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/ic_custom_boton">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:layout_weight="0.5"
                >

                <EditText
                    android:id="@+id/nombreTitular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/gris_textos"
                    android:backgroundTint="@color/gris_textos"
                    android:textColor="@color/white"
                    android:hint="@string/ev_name">

                </EditText>

                <EditText
                    android:id="@+id/apellido1Titular"
                    android:textColorHint="@color/gris_textos"
                    android:backgroundTint="@color/gris_textos"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/ev_surname1">

                </EditText>

                <EditText
                    android:id="@+id/apellido2Titular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/gris_textos"
                    android:backgroundTint="@color/gris_textos"
                    android:textColor="@color/white"
                    android:hint="@string/ev_surname2">

                </EditText>

                <EditText
                    android:id="@+id/dniTitular"
                    android:textColorHint="@color/gris_textos"
                    android:backgroundTint="@color/gris_textos"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/ev_id">

                </EditText>

            </LinearLayout>


            <ImageView
                android:id="@+id/experiencia_foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>