<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegistroActivity"
    android:background="@color/negro_fondo"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/ic_background_gradient_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="35sp"
                app:srcCompat="@drawable/ic_logo_meet_login"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meet_fever_registro"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:gravity="center"
                android:fontFamily="@font/montserrat_light"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/inputCorreoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/ic_inputs_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/correo_electr_nico"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                android:textColor="@color/gris_textos"
                android:textColorHint="@color/gris_textos"
                />

            <EditText
                android:id="@+id/inputNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/ic_inputs_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ser_tu_nick_p_blico"
                android:inputType="text"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                android:textColor="@color/gris_textos"
                android:textColorHint="@color/gris_textos"
                />

            <EditText
                android:id="@+id/inputNumeroTelefonoRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/ic_inputs_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/n_mero_de_tel_fono"
                android:inputType="text"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                android:textColor="@color/gris_textos"
                android:textColorHint="@color/gris_textos"
                />

            <EditText
                android:id="@+id/inputContrasenaRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/ic_inputs_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                android:textColor="@color/gris_textos"
                android:textColorHint="@color/gris_textos"
                />

            <EditText
                android:id="@+id/inputContrasena2Registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/ic_inputs_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/repetir_la_contrase_a"
                android:inputType="textPassword"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp"
                android:layout_marginTop="40dp"
                android:textColor="@color/gris_textos"
                android:textColorHint="@color/gris_textos"
                />

            <!-- En caso de que sea cuenta de empresa solo se pintará esto -->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botonRegistrarse"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:text="@string/registrarse"
                android:textColor="@color/white"
                android:background="@drawable/ic_custom_boton"
                android:fontFamily="@font/montserrat_light"
                android:layout_marginTop="40dp"
                android:textAllCaps="false"
                />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_linea_divisoria"
                    />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_linea_divisoria"
                    />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_light"
                    android:text="@string/ya_tienes_cuenta"
                    android:textColor="@color/gris_textos"
                    android:gravity="center"
                    />

            </GridLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/botonVolverAInicioDeSesion"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:layout_height="40dp"
                android:text="@string/volver_atr_s"
                android:textColor="@color/white"
                android:background="@drawable/ic_custom_boton"
                android:fontFamily="@font/montserrat_light"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                android:layout_marginBottom="35sp"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>